# fuzzy-sat

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.MD  README.md  debug-eval.c  eval-driver.c  findall-driver.c  fuzzy-solver-notify.c  fuzzy-solver-vs-z3.c  fuzzy-solver.c  interval_test.c  maxmin-driver.c  solver.c  stats-collection-fuzzy.c  stats-collection-z3.c  testcase-list.c  testcase-list.h  z3-fuzzy-datastructures-gen.h  z3-fuzzy-debug-utils.h  z3-fuzzy.c  z3-fuzzy.h
.circleci/: config.yml
include/: dict.h  set.h
lib/: CMakeLists.txt  dynamic-array.h  gradient_descend.c  testcase-list.c  testcase-list.h  timer.c  timer.h  z3-fuzzy-datastructures-gen.h  z3-fuzzy-debug-utils.h  z3-fuzzy.c  z3-fuzzy.h
python/: .gitignore  setup.py  test.py
scripts/: decompress_and_run.sh  detect_interesting_queries.py  extract_check_light_phases.py  extract_faster_fuzzy.py  extract_query_k.py  findall_sols.py  fix_query.sh  fix_query_and_compress.sh  how_many_sat_in_fuzzy_time.py  load_queries.py  merge_queries_from_folder.py  num_queries.py  parse_filps.py  parse_fuzzy_jfs.py  parse_fuzzy_sat_z3_unkown.py  parse_info_query.py  parse_info_query_splitted.py  parse_run_multiple_log.py  query-printer.py  run_batch_fuzzy_jfs.sh  run_batch_fuzzy_with_parsing.sh  run_batch_fuzzy_z3.sh  run_batch_fuzzy_z3_new.sh  run_experiment.py  (+3 more)
tests/: run.py  (+5 more)
tools/: CMakeLists.txt  debug-eval.c  eval-driver.c  findall-driver.c  fuzzy-solver-notify.c  fuzzy-solver-vs-z3.c  fuzzy-solver.c  interval_test.c  stats-collection-fuzzy.c  stats-collection-z3.c  test-easy.c
(+19 files in other folders)
